--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,11 +1,32 @@
+/* Styles for the header */
 header {
     background: white;
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
 }
+
+/* Styles for the logo */
 header .logo {
     background: url("../images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
+}
+
+/* Styles for the api_status div */
+#api_status {
+    background-color: #cccccc;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    float: right;
+    margin-right: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Styles for the "available" class */
+.available {
+    background-color: #ff545f;
 }
